2009-03-02	Daniel Hellstrom <daniel@gaisler.com>

	PR 1390/bsps
	* startup/linkcmds: Fix sections so C++ global constructors and
	destructors work with late model (>= 4.3) gcc versions.

2008-12-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Backport from CVS-HEAD.

2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console.c, timer/timer.c: Convert to "bool".

2008-09-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* timer/timer.c: Convert using "bool".

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Eliminate empty function from every benchmark timer
	driver. Fix spelling.

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Rename timer driver methods to follow RTEMS
	programming conventions.

2008-08-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* gnatsupp/gnatsupp.c, timer/timer.c: Add missing prototypes.

2008-08-08	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/linkcmds: All SPARC executables should include
	rtems_get_version_string so the monitor used can provide RTEMS
	awareness based upon the version.

2008-08-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1294/bsps
	* startup/spurious.c: Correct prototype and usage of
	sparc_disable_interrupts.

2008-08-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1294/bsps
	* startup/spurious.c: Correct prototype and usage of
	sparc_disable_interrupts.

2008-05-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add capability for bootcard.c BSP
	Initialization Framework to ask the BSP where it has memory for the
	RTEMS Workspace and C Program Heap. These collectively are referred
	to as work area. If the BSP supports this, then it does not have to
	include code to split the available memory between the two areas.
	This reduces the amount of code in the BSP specific bspstart.c file.
	Additionally, the shared framework can initialize the C Library, call