@@ -1,3 +1,8 @@
+2009-03-09	Antoine Lacroix <antoine.lacroix at sodern.fr>
+
+	PR 1391/bsps
+	* startup/spurious.c: Format was %d but had leading 0x.
+
 2009-03-02	Daniel Hellstrom <daniel@gaisler.com>
 
 	PR 1390/bsps
